# fakestore-backend-drf

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: settings.py  urls.py
core/: admin.py  authentication.py
core/migrations/: 0001_initial.py  0002_category_order_product_orderitem.py
core/models/: __init__.py  category.py  order.py  product.py  user.py
core/serializers/: __init__.py  category.py  order.py  product.py  user.py
core/views/: __init__.py  category.py  order.py  product.py  user.py
scripts/: set_my_ip.py
uploader/: views.py
uploader/models/: document.py  image.py
uploader/serializers/: document.py  image.py
