[project]
name = "fakestore-backend-drf"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Eduardo da Silva", email = "eduardo.silva@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
